tests/bad/field_type_undef.ae
/// fail: Type of field is undefined

struct Anything {
    a: MadeUp
}
